# satnogs-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/satnogs_mcp/: __init__.py  __main__.py  cache.py  client.py  server.py
tests/: test_server.py
